Improvings in project organization
